# tw-mailer

./: CMakeLists.txt  MailClient.cpp  MailServer.cpp  README.md
src/Client/: Client.cpp  Client.h  ClientHandlers.cpp  ClientHandlers.h
src/Server/: LdapHandler.cpp  LdapHandler.h  Server.cpp  Server.h  ServerHandler.cpp  ServerHandler.h
src/Server/MailManager/: Mail.h  MailManager.cpp  MailManager.h
src/Shared/: Command.h  ErrorCode.h  Message.cpp  Message.h  MessageCmd.h  NetUtilities.cpp  NetUtilities.h
